--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -6,5 +6,6 @@ title: StartupsInParis
 - startups.each do |s|
   h1 = s["name"]
   p = s["summary"]
+  = link_to 'See more', "/#{s["name"].downcase.split(" ").join("-")}"
   br
 
