--- a/source/submit/index.html.slim
+++ b/source/submit/index.html.slim
@@ -40,6 +40,6 @@ form.add-startup id="add-startup" name="add-startup" action="http://nebulae-dash
         label Logo URL (png, at least 250px wide)
         input.fld name="logo_url" id="logo_url" required=""
       .group
-        label What domain does your startup operate in?
+        label What domain does your startup operate in? (seperate the tags with a comma)
         input.fld name="market_domain" id="market_domain" required=""
     input.btn type="submit" name="commit" value="Send" disabled="disabled"
