--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -1,7 +1,8 @@
 ---
 title: StartupsInParis
 ---
-
+= link_to 'Submit a new startup', '/submit'
+hr
 - startups = JSON.load(open("https://nebulae-dashboard.herokuapp.com/startups-index.json"))
 - startups.each do |s|
   h1 = s["name"]
