--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -1,12 +1,12 @@
 ---
 title: StartupsInParis
 ---
-= link_to 'Submit a new startup', "#{current_page.url}submit"
+= link_to 'Submit a new startup', "#{request.path}submit"
 hr
 - startups = JSON.load(open("https://nebulae-dashboard.herokuapp.com/startups-index.json"))
 - startups.each do |s|
   h1 = s["name"]
   p = s["summary"]
-  = link_to 'See more', current_page.url + s["name"].downcase.split(" ").join("-")
+  = link_to 'See more', request.path + s["name"].downcase.split(" ").join("-")
   br
 
