--- a/source/layouts/startup-layout.slim
+++ b/source/layouts/startup-layout.slim
@@ -1,9 +1,7 @@
 doctype html
 html
   head
-    meta content="IE=edge" http-equiv="X-UA-Compatible"
-    meta charset="utf-8"
-    meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport"
+    = partial 'partials/meta_and_seo'
 
     title = startup_title_helper
     meta name="description" content=startup_description_helper 
