--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    = partial 'meta_and_seo'
+    = partial 'partials/meta_and_seo'
     = partial 'partials/og', locals: {  og_image_url: data.site.site_logo,
                                         twitter_publisher_handle: data.site.twitter_handle,
                                         twitter_page_title: data.site.title,
@@ -12,7 +12,7 @@ html
     title = data.site.title
 
     link href="//fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet" type="text/css"
-    = stylesheet_link_tag :site
+    = stylesheet_link_tag :application
     = javascript_include_tag :application
 
   body class=(page_classes if page_classes)
