--- a/source/layouts/startup-layout.slim
+++ b/source/layouts/startup-layout.slim
@@ -13,7 +13,7 @@ html
     meta name="description" content=startup_description_helper 
 
     link href="//fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet" type="text/css"
-    = stylesheet_link_tag :site
+    = stylesheet_link_tag :application
     = javascript_include_tag :application
 
 
