--- a/source/stylesheets/application.css.sass
+++ b/source/stylesheets/application.css.sass
@@ -2,9 +2,6 @@
 @import 'mixins'
 @import 'normalize'
 
-* 
-	outline: 1px solid red
-
 a
 	text-decoration: none
 
@@ -23,16 +20,24 @@ body
 	font-family: $font-family-base
 
 
-
 nav.ctg,
 #content
 	background-color: $dirt
 
 #header
-	+clearfix
+	@media screen and (min-width: $container-big)
+		.logo,
+		.util
+			position: relative
+		.logo
+			width: 50%
+		.util
+			width: 50%
 	
+	+clearfix
 	h1
-		width: 600px
+		padding: 0
+		margin: 0
 		display: block
 
 @media screen and (min-width: $container-big)
@@ -40,15 +45,49 @@ nav.ctg,
 		float: left
 
 .util
-	float: left
+	@media screen and (min-width: $container-big)
+		max-width: 300px
+		padding-left: $box-pad * 2
+	
+	ul, a
+		display: block
+	
+	li
+		a
+			width: 60px
+			text-align: center
+		&:nth-child(1) img
+			width: 35px
+		&:nth-child(2) img
+			width: 16px
+		&:nth-child(3) img
+			width: 40px
+		&.submit
+			@media screen and (min-width: $container-big)
+				display: block
+				a
+					width: auto
+		display: inline-block
+		padding: 0px 5px 5px 0
+		background: $dirt
+		margin: 0 15px 15px 0
+
+	a
+		padding: 14px 10px 10px 10px
+		color: $blumarin
+		font-weight: bold
+		background: white
+	
 
 .wrap
 	max-width: $container-max
 	+center-block
 
-.ctg
+nav.ctg
+	select, ul
+		display: none
+	
 	ul
-		display: table
 		width: 100%
 		border-bottom: 2px solid $peach
 	
@@ -65,6 +104,45 @@ nav.ctg,
 		+transition(200ms)
 		&:hover
 			background-color: white
+	
+	select
+		&:focus
+			outline: none
+		&:after
+			content: 'test'
+			display: block
+			position: absolute
+		
+		width: 100%
+		overflow: hidden
+		padding: 10px
+		margin: 0
+		border: 2px solid $blumarin
+		-webkit-appearance: none
+		-moz-appearance: none
+		appearance: none
+		box-shadow: none
+		border-radius: 0
+		+background-image('arrow_ico.svg')
+		background-color: transparent
+		background-size: 30px 30px
+		background-position: right 5px
+		background-repeat: no-repeat
+
+
+	@media screen and (min-width: $container-sm)
+		select
+			display: block
+	
+	@media screen and (min-width: $container-big)
+		select
+			display: none
+		ul
+			display: table
+
+
+// Custom select
+
 
 ul.startups
 	display: block
@@ -85,15 +163,7 @@ ul.startups
 		position: absolute
 		+stretch
 
-
-
-
-
 #content
 	padding-top: 2px solid $peach
-
-
-
-
 
 
