--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -33,3 +33,25 @@ $nav-height: 60px;
 $peach: #f9efed;
 $dirt: #e1dad8;
 $blumarin: #3a3b73;
+
+
+// debug kit
+// * {
+// 	outline: 1px dotted fade-out(black, 0.9);
+
+// 	@media screen and (min-width: $container-sm) {
+// 		outline: 1px dotted fade-out(blue, 0.9);
+// 	}
+// 	@media screen and (min-width: $container-md) {
+// 		outline: 1px dotted fade-out(green, 0.9);
+// 	}
+// 	@media screen and (min-width: $container-big) {
+// 		outline: 1px dotted fade-out(olive, 0.9);
+// 	}
+// 	@media screen and (min-width: $container-lg) {
+// 		outline: 1px dotted fade-out(orange, 0.9);
+// 	}
+// 	@media screen and (min-width: $container-max) {
+// 		outline: 1px dotted fade-out(red, 0.9);
+// 	}
+// }
