--- a/source/stylesheets/application.css.sass
+++ b/source/stylesheets/application.css.sass
@@ -22,17 +22,33 @@ body
 
 nav.ctg,
 #content
-	background-color: $dirt
+	background-color: white
+
+.logo, .util
+	position: relative
 
 #header
-	@media screen and (min-width: $container-big)
-		.logo,
-		.util
-			position: relative
+	// padding-bottom: $box-pad/2
+	.logo, .util
+		width: 100%
+	
+	@media screen and (min-width: $container-md)
+		$logo-w: 67
 		.logo
-			width: 50%
+			width: ($logo-w) * 1%
 		.util
-			width: 50%
+			width: (100 - $logo-w) * 1%
+
+	@media screen and (min-width: 890px)
+		.logo
+			width: 600px
+	
+	// @media screen and (min-width: $container-big)
+	// 	// .logo
+	// 		// width: 600px
+	// 	.util
+	// 		padding-top: $box-pad
+	// 		// width: 50%
 	
 	+clearfix
 	h1
@@ -41,42 +57,83 @@ nav.ctg,
 		display: block
 
 @media screen and (min-width: $container-big)
-	.logo, .util
-		float: left
+
+.logo
+	float: left
 
 .util
+	float: right
+
 	@media screen and (min-width: $container-big)
-		max-width: 300px
-		padding-left: $box-pad * 2
+		max-width: 227px
+	
+	@media screen and (max-width: 750px) and (min-width: $container-md)
+		max-width: 146px
 	
 	ul, a
 		display: block
 	
 	li
-		a
-			width: 60px
-			text-align: center
-		&:nth-child(1) img
-			width: 35px
-		&:nth-child(2) img
-			width: 16px
-		&:nth-child(3) img
-			width: 40px
-		&.submit
-			@media screen and (min-width: $container-big)
-				display: block
-				a
-					width: auto
-		display: inline-block
+		
+		display: block
+		float: left
+		
+		@media screen and (min-width: 750px)
+			display: inline-block
+			float: none
+			// outline: 4px solid red
+		
 		padding: 0px 5px 5px 0
 		background: $dirt
 		margin: 0 15px 15px 0
+		// line-height: 60px
+		a
+			+square(60px)
 
-	a
-		padding: 14px 10px 10px 10px
-		color: $blumarin
-		font-weight: bold
-		background: white
+			text-align: center
+			display: block
+			
+			img
+				+center-block
+			// line-height: 10px
+			padding-top: 15px
+			padding-bottom: 14px
+			color: $blumarin
+			font-weight: bold
+			background: white
+
+		&:nth-child(1) img
+			width: 35px
+		&:nth-child(2)
+			img
+				width: 16px
+			@media screen and (min-width: $container-md) and (max-width: 750px)
+				margin-right: 0
+		&:nth-child(3)
+			img
+				width: 37px
+			@media screen and (min-width: 750px)
+				margin-right: 0
+			a
+				padding-top: 17px
+
+		&.submit
+			margin-right: 1px
+			a
+				// line-height: 20px
+				// padding: 0
+				// display: block
+				// background: blue
+			@media screen and (max-width: 750px)
+				// display: block
+
+			@media screen and (min-width: 750px)
+				width: auto
+				display: block
+				a
+					+size(auto)
+		
+
 	
 
 .wrap
@@ -103,7 +160,8 @@ nav.ctg
 		display: block
 		+transition(200ms)
 		&:hover
-			background-color: white
+			background-color: $blumarin
+			color: white
 	
 	select
 		&:focus
@@ -145,23 +203,54 @@ nav.ctg
 
 
 ul.startups
+	+clearfix
 	display: block
-	li
-		left: -2px
-		position: relative
-		display: inline-block
-		width: (100 / 5) * 1%
-		border-left: 2px solid $peach
-		border-bottom: 2px solid $peach
-		padding-top: 15%
 
-	a
-		color: $blumarin
-		text-align: center
-		padding-top: 32%
-		display: block
-		position: absolute
-		+stretch
+	li
+		float: left
+		width: 100%
+		position: relative
+		border-bottom: 2px solid $peach
+		a
+			color: $blumarin
+		
+		> div
+			+stretch
+			text-align: center
+			
+			> div
+				+square(100%)
+				display: table
+				
+				a
+					vertical-align: middle
+					display: table-cell
+
+		&:before
+			content: ""
+			display: block
+			padding-top: 100%
+
+		// left: -2px
+		// position: relative
+		// display: inline-block
+		// width: 100%
+		
+		@media screen and (min-width: $container-md)
+			width: (100 / 2) * 1%
+			left: -2px
+			border-left: 2px solid $peach
+		
+		@media screen and (min-width: $container-big)
+			width: (100 / 3) * 1%
+		@media screen and (min-width: $container-lg)
+			width: (100 / 4) * 1%
+		@media screen and (min-width: $container-max)
+			width: (100 / 5) * 1%
+
+		
+
+			
 
 #content
 	padding-top: 2px solid $peach
