update form input.text for an integer to a input.number

--- a/source/submit/index.html.slim
+++ b/source/submit/index.html.slim
@@ -29,7 +29,7 @@ form.add-startup id="add-startup" name="add-startup" action="http://nebulae-dash
         input.fld name="address" id="address" required=""
       .group
         label Employee count
-        input.fld name="employee_count" id="employee_count" required=""
+        input.fld type="number" min="0" step="1" name="employee_count" id="employee_count" required=""
       .group
         label Website URL
         input.fld name="website_url" id="website_url" required=""
