--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -1,49 +1,15 @@
-.wrap
-	
-	header#header
-		
-		.logo
-			h1 =image_tag 'logo.svg'
-		
-		.util
-			ul
-				li =link_to image_tag('twitter_ico.svg', :alt => 'twitter'), 'http://twitter.com/parisianstartups'
-				li =link_to image_tag('fb_ico.svg', :alt => 'facebook'), 'http://facebook.com/parisianstartups'
-				li =link_to image_tag('newsletter_ico.svg', :alt => 'newsletter'), 'newsletter'
-				/ li =link_to image_tag('newsletter_ico.svg', :alt => 'newsletter'), 'newsletter'
-				li.submit =link_to 'Add Yours', 'submit'
-	
-	nav.ctg
-		
-		select
-			option =link_to 'FOOD', 'categ'
-			option =link_to 'FINANCE', 'categ'
-			option =link_to 'TECH', 'categ'
-			option =link_to 'FASHION', 'categ'
-			option =link_to 'SPORT', 'categ'
-			option =link_to 'DESIGN', 'categ'
-			option =link_to 'MEDIA', 'categ'
-			option =link_to 'JOBS', 'categ'
-			option =link_to 'SOCIAL', 'categ'
-		
-		ul
-			li =link_to 'FOOD', 'categ'
-			li =link_to 'FINANCE', 'categ'
-			li =link_to 'TECH', 'categ'
-			li =link_to 'FASHION', 'categ'
-			li =link_to 'SPORT', 'categ'
-			li =link_to 'DESIGN', 'categ'
-			li =link_to 'MEDIA', 'categ'
-			li =link_to 'JOBS', 'categ'
-			li =link_to 'SOCIAL', 'categ'
+---
+title: index
+---
 
-	section#content
-		ul.startups
-			- startups = JSON.load(open("https://nebulae-dashboard.herokuapp.com/startups-index.json"))
-			- startups.each do |s|
-			  / h1 = s["name"]
-			  / p = s["summary"]
-			  li: div
-			  	div 
-			  		= link_to "#{s["name"]}", "#{s["name"].downcase.split(" ").join("-")}"
-			  		/span = image_tag s["logo_url"]
+= partial 'partials/categories'
+
+ul.startups
+	- startups = JSON.load(open("https://nebulae-dashboard.herokuapp.com/startups-index.json"))
+	- startups.each do |s|
+	  / h1 = s["name"]
+	  / p = s["summary"]
+	  li: div
+	  	div 
+	  		= link_to "#{s["name"]}", "#{s["name"].downcase.split(" ").join("-")}"
+	  		span = image_tag s["logo_url"]
