--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -11,10 +11,23 @@ html
 			twitter_image_url: startup_image_helper }
 
 		title = data.site.title
-
 		link href="//fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet" type="text/css"
 		= stylesheet_link_tag :application
 		= javascript_include_tag :application
 
 	body class=(page_classes if page_classes)
-		== yield
+
+		.wrap
+			header#header
+				.logo
+					h1 =image_tag 'logo.svg'
+				.util
+					ul
+						li =link_to image_tag('twitter_ico.svg', :alt => 'twitter'), 'http://twitter.com/parisianstartups'
+						li =link_to image_tag('fb_ico.svg', :alt => 'facebook'), 'http://facebook.com/parisianstartups'
+						li =link_to image_tag('newsletter_ico.svg', :alt => 'newsletter'), 'newsletter'
+						/ li =link_to image_tag('newsletter_ico.svg', :alt => 'newsletter'), 'newsletter'
+						li.submit =link_to 'Add Yours', 'submit'
+			
+			section#content
+				== yield
