--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -2,14 +2,12 @@
 title: index
 ---
 
-/ = partial 'partials/categories'
-
 ul.startups
 	- startups = JSON.load(open("https://nebulae-dashboard.herokuapp.com/startups-index.json"))
 	- startups.each do |s|
-	  / h1 = s["name"]
-	  / p = s["summary"]
-	  li: div
-	  	div 
-	  		= link_to "#{s["name"]}", "#{s["name"].downcase.split(" ").join("-")}"
-	  		span = image_tag s["logo_url"]
+	  li
+			div
+				div
+					= link_to "#{s["name"].downcase.split(" ").join("-")}" do
+						strong =s["name"]
+						=image_tag s["logo_url"]
