--- a/source/startup-template.html.slim
+++ b/source/startup-template.html.slim
@@ -13,7 +13,7 @@ header.st-name
 	.col.sm-w4.w6
 		ul.st-det
 			li.st-logo= image_tag logo_url
-			li.st-url= link_to website_url.gsub('http://', ''), website_url
-			li.st-twitter= link_to twitter_url.gsub('https://', ''), twitter_url
+			li.st-url= link_to website_url, website_url
+			li.st-twitter= link_to twitter_url, twitter_url
 			li.st-address= address
 
