--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -35,10 +35,10 @@ $dirt: #e1dad8;
 $blumarin: #3a3b73;
 
 
-#indicator {
-	padding: $box-pad / 2
-	+place(fixed, 0, auto, auto, 0)
-}
+// #indicator {
+// 	padding: $box-pad / 2;
+// 	+place(fixed, 0, auto, auto, 0);
+// }
 
 // debug kit
 // * {
