--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -1,8 +1,9 @@
 // Defaults
 $pi: 3.14; // for the golden section
 
-$font-size-base:     28px !default;
-$font-family-base :  'Graphik-Regular', sans-serif;
+$font-size-base:     18px !default;
+$font-family-base:  'Graphik-Regular', sans-serif;
+$line-height-base: 		1.4;
 $color-base:     			#000000;
 $body-bg: 		 	 			#FFFFFF;
 $line-height-base:		1.5em !default;
