fix submit link from startup pages

--- a/source/partials/_navbar.slim
+++ b/source/partials/_navbar.slim
@@ -24,6 +24,6 @@ nav#navbar
 				li =link_to 'newsletter' do
 					svg viewBox="0 0 1280 900": use xlink:href="#icon-mail"
 				
-				li.submit =link_to 'Add Yours', 'submit'
+				li.submit =link_to 'Add Yours', root_url('submit')
 
 	= partial 'partials/icons'
